fixed z-index

--- a/css/main.css
+++ b/css/main.css
@@ -87,7 +87,7 @@ body {
     background-color:  #e8cbe2;
     overflow: hidden;
     padding: 0;
-    z-index: -3;
+    z-index: 2;
     margin:0;
 }
 
@@ -177,6 +177,7 @@ h2 {
     top: 35em;
     margin: 0;
     width:100%;
+    z-index: 1000;
 }
 
 .down a:hover {
